@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Town portal now has an animation instead of being immediate.
+ server/spell_effect.c
+Nicolas Weeger 2010-03-25
+
 Have disappearing FLAG_IS_USED_UP items put their inventory on the ground, not on pile top.
  server/time.c
 Nicolas Weeger 2010-03-25
